2007-02-01  Joachim Noreiko  <jnoreiko@yahoo.com>

	* C/gedit.xml: use term 'folder', not 'directory' in the filebrowser. #353987

=== gedit 2.17.4 ===

2007-01-17  Daniel Nylander <po@danielnylander.se>

        * sv/sv.po: Updated Swedish translation.
	* sv/figures/gedit_window.png: Updated screenshot.
	* C/gedit.xml: Fixed typo.
	
=== gedit 2.17.3 ===

2006-12-19  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es/es.po: Updated Spanish translation.

=== gedit 2.17.2 ===

2006-12-10  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.

=== gedit 2.17.1 ===

2006-11-19  Christophe Bliard  <christophe.bliard@trux.info>

	* fr/fr.po: Updated French translation.

2006-11-13  Joachim Noreiko  <jnoreiko@yahoo.com>

	* C/gedit.xml: Snippets: replace 'accelerator' with 'shortcut key'
	  to match UI change (bug #374706)
	  Adding mention of other ways to move the selection between matches during find-as-you-type: arrow keys, mouse wheel.

2006-11-12  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es.po: Updated Spanish translation.

2006-11-09  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.
	
2006-11-05  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es/es.po: Updated Spanish translation.

=== gedit 2.16.2 ===

2006-10-15  Christophe Bliard  <christophe.bliard@trux.info>

	* fr/fr.po: Updated French translation.

2006-10-12  Salikhov Timur  <tima-s@yandex.ru>

	* Makefile.am:
	* ru/ru.po:  Added Russian translation.

=== gedit 2.16.1 ===

2006-09-23  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es/es.po: Updated Spanish translation.

2006-09-09  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es/es.po: Updated Spanish translation.

2006-09-06  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es/es.po: Updated Spanish translation.

=== gedit 2.16.0 ===

2006-09-02  Joachim Noreiko  <jnoreiko@yahoo.com>
