@@ -22,6 +22,9 @@
   <articleinfo>
 	 <title>Gedit Manual<!-- not using app entity because of lowercase ugliness --></title>
 	 <copyright>
+		<year>2007</year>
+		<holder>GNOME Documentation Project</holder> </copyright>	 
+	 <copyright>
 		<year>2002</year>
 		<year>2003</year>
 		<year>2004</year>
@@ -38,14 +41,21 @@
   </copyright>
 
    -->
-	 <publisher>
+	 <publisher role="maintainer">
 		<publishername>GNOME Documentation Project</publishername>
 	 </publisher>
 
 	 <xi:include href="legal.xml" xmlns:xi="http://www.w3.org/2001/XInclude"/>
 
 	 <authorgroup>
-		<author role="maintainer">
+		<author>
+		  <firstname>GNOME Documentation Project</firstname>
+		  <surname></surname>
+		  <affiliation>
+			 <orgname>GNOME</orgname>
+		  </affiliation>
+		</author>	 
+		<author>
 		  <firstname>Sun Java Desktop System Documentation Team</firstname>
 		  <surname></surname>
 		  <affiliation>
@@ -65,12 +75,12 @@
 			<firstname>Baris</firstname>
 			<surname>Cicek provided information from earlier revisions of the gedit application.</surname>
 			<contrib>Acknowledgements</contrib>
-      </othercredit>
+    </othercredit>
 		<othercredit role="reviewer">
 			<firstname>Ajit</firstname>
 			<surname>George provided information about plugins.</surname>
 			<contrib>Acknowledgements</contrib>
-      </othercredit>
+    </othercredit>
 
 
 <!-- This is appropriate place for other contributors: translators,
