@@ -1,12 +1,13 @@
 2007-02-01  Joachim Noreiko  <jnoreiko@yahoo.com>
 
 	* C/gedit.xml: use term 'folder', not 'directory' in the filebrowser. #353987
+	  updating author information (no idea if done it right, gfdl requirements a mystery).
 
 === gedit 2.17.4 ===
 
 2007-01-17  Daniel Nylander <po@danielnylander.se>
 
-        * sv/sv.po: Updated Swedish translation.
+  * sv/sv.po: Updated Swedish translation.
 	* sv/figures/gedit_window.png: Updated screenshot.
 	* C/gedit.xml: Fixed typo.
 	
